--- a/src/index.css
+++ b/src/index.css
@@ -3,26 +3,10 @@
 @tailwind utilities;
 
 body{
-    /*background-image: url('imagens/aviao-no-ceu.webp');
-    background-size:cover;
-    background-repeat: no-repeat;*/
     background-color: #f0f9ff;
-    
+    background-image: linear-gradient( to bottom, #ebeeff, #abd3eb,#19baf5, #51bcf1, #abd3eb,#abd3eb, #ebeeff,#f0f9ff );
+    background-repeat: no-repeat;
 }
 
-/*.imagem-fundo{
-    display: flex;
-    align-items: center;
-    height:800px;
-    opacity: 0.2;
-    padding
-}
-
-img{
-    border: none;
-    border-radius: 200px;
-    
-   
-}*/
 
 
